--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -2,6 +2,11 @@
 <div *ngFor="let product of products">
   <h3>
     {{ product.name }}
+    <div>
+      <p *ngIf="product.description">
+        {{ product.description }}
+      </p>
+    </div>
   </h3>
 </div>
 
